--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,55 +58,67 @@
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <ImageView
-        android:id="@+id/imageView6"
+
+    <ImageButton
+        android:id="@+id/btnHamburguer"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/hamburguer"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/hamburguer"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toStartOf="@+id/btnChicken"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:srcCompat="@drawable/hamburguer" />
 
-    <ImageView
-        android:id="@+id/imageView7"
+    <ImageButton
+        android:id="@+id/btnChicken"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:background="@drawable/chicken"
+        android:backgroundTint="#2D2F31"
         android:contentDescription="@string/chicken"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-        app:layout_constraintEnd_toStartOf="@+id/imageView8"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="@+id/btnHamburguer"
+        app:layout_constraintEnd_toStartOf="@+id/btnDrink"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintStart_toEndOf="@+id/btnHamburguer"
+        app:layout_constraintTop_toTopOf="@+id/btnHamburguer"
         app:srcCompat="@drawable/chicken" />
 
-    <ImageView
-        android:id="@+id/imageView8"
+    <ImageButton
+        android:id="@+id/btnDrink"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:background="@drawable/chicken"
+        android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/drink"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/imageView9"
+        android:scaleType="centerInside"
+        android:src="@drawable/chicken"
+        app:layout_constraintBottom_toBottomOf="@+id/btnChicken"
+        app:layout_constraintEnd_toStartOf="@+id/btnPizza"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
-        app:srcCompat="@drawable/drink" />
+        app:layout_constraintStart_toEndOf="@+id/btnChicken"
+        app:layout_constraintTop_toTopOf="@+id/btnChicken" />
 
-    <ImageView
-        android:id="@+id/imageView9"
+    <ImageButton
+        android:id="@+id/btnPizza"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/pizza"
+        android:backgroundTint="#3C3F41"
         android:contentDescription="@string/pizza"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="@+id/btnDrink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintStart_toEndOf="@+id/btnDrink"
+        app:layout_constraintTop_toTopOf="@+id/btnDrink"
         app:srcCompat="@drawable/pizza" />
 
     <TextView
@@ -128,9 +140,9 @@
         android:layout_marginTop="5dp"
         android:text="@string/Quickhamburguer"
         android:textAppearance="@style/subtitle_icon"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintEnd_toEndOf="@+id/btnHamburguer"
+        app:layout_constraintStart_toStartOf="@+id/btnHamburguer"
+        app:layout_constraintTop_toBottomOf="@+id/btnHamburguer" />
 
     <TextView
         android:id="@+id/textView7"
@@ -140,8 +152,8 @@
         android:layout_marginEnd="9dp"
         android:text="@string/section_chicken"
         android:textAppearance="@style/subtitle_icon"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="@+id/btnChicken"
+        app:layout_constraintStart_toStartOf="@+id/btnChicken"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
@@ -150,8 +162,8 @@
         android:layout_height="wrap_content"
         android:text="@string/section_drink"
         android:textAppearance="@style/subtitle_icon"
-        app:layout_constraintEnd_toEndOf="@+id/imageView8"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="@+id/btnDrink"
+        app:layout_constraintStart_toStartOf="@+id/btnDrink"
         app:layout_constraintTop_toTopOf="@+id/textView7" />
 
     <TextView
@@ -160,8 +172,8 @@
         android:layout_height="wrap_content"
         android:text="@string/section_pizza"
         android:textAppearance="@style/subtitle_icon"
-        app:layout_constraintEnd_toEndOf="@+id/imageView9"
-        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="@+id/btnPizza"
+        app:layout_constraintStart_toStartOf="@+id/btnPizza"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <androidx.recyclerview.widget.RecyclerView
