--- a/app/src/main/res/layout/activity_intro_page.xml
+++ b/app/src/main/res/layout/activity_intro_page.xml
@@ -10,12 +10,12 @@
         android:id="@+id/logoImage"
         android:layout_width="360dp"
         android:layout_height="300dp"
-        android:layout_marginTop="25dp"
         android:contentDescription="@string/restaurante"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/intro" />
 
     <Button
@@ -32,27 +32,27 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:fontFamily="@font/proximanovabold"
-        android:text="@string/restorbar_app"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView13"
+        style="@style/intro_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/proximanovaregular"
         android:text="@string/la_mejor_comida_criolla_del_per"
-        android:textSize="18sp"
+        android:textAppearance="@style/intro_subtitle"
         app:layout_constraintEnd_toEndOf="@+id/logoImage"
         app:layout_constraintStart_toStartOf="@+id/logoImage"
         app:layout_constraintTop_toBottomOf="@+id/logoImage" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="278dp"
+        android:layout_height="107dp"
+        android:layout_marginTop="90dp"
+        android:contentDescription="@string/logo_store_eat_24_7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/eatredlogoicon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
