--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_design">#BC2C3D</color>
+    <color name="red_design_soft">#A6C1515E</color>
     <color name="black_design">#2C2627</color>
     <color name="gray_design">#686263</color>
 </resources>
