--- a/app/src/main/res/layout/recommendation_row_item.xml
+++ b/app/src/main/res/layout/recommendation_row_item.xml
@@ -61,14 +61,17 @@
         app:layout_constraintStart_toStartOf="@+id/ratingBar"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/item_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="#FFFFFF"
         android:contentDescription="@string/add_to_cart"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/item_price"
         app:layout_constraintEnd_toEndOf="@+id/item_time"
         app:layout_constraintTop_toBottomOf="@+id/item_time"
-        app:srcCompat="@drawable/ic_cart" />
+        app:srcCompat="@drawable/ic_cart"
+        tools:srcCompat="@drawable/ic_cart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
