--- a/app/src/main/res/layout/store_row_item.xml
+++ b/app/src/main/res/layout/store_row_item.xml
@@ -5,16 +5,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/item_image"
         android:layout_width="180dp"
         android:layout_height="90dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/storeone"
         android:contentDescription="@string/local"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/storeone" />
+        app:srcCompat="@drawable/storeone"
+        tools:srcCompat="@drawable/storeone" />
 
     <TextView
         android:id="@+id/item_name"
