--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -80,4 +80,21 @@
         <item name="android:background">#B2A19797</item>
         <item name="android:backgroundTint">#45978E8E</item>
     </style>
+
+    <style name="quantity">
+        <item name="android:fontFamily">@font/proximanovasemibold</item>
+        <item name="android:textColor">@color/gray_design</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="resumeCart">
+        <item name="android:fontFamily">@font/proximanovabold</item>
+        <item name="android:textColor">@color/black_design</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="black_button_design">
+        <item name="android:backgroundTint">@color/black_design</item>
+    </style>
 </resources>
