--- a/app/src/main/res/layout/store_full_row_item.xml
+++ b/app/src/main/res/layout/store_full_row_item.xml
@@ -9,11 +9,11 @@
         android:id="@+id/item_image"
         android:layout_width="180dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/storeone"
         android:contentDescription="@string/local"
         android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/storeone"
@@ -23,24 +23,43 @@
         android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="30dp"
         android:text="@string/larco"
         android:textAppearance="@style/subtitle_bold"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/item_image"
-        app:layout_constraintTop_toBottomOf="@+id/item_image" />
+        app:layout_constraintStart_toEndOf="@+id/item_image"
+        app:layout_constraintTop_toTopOf="@+id/item_image" />
 
     <TextView
         android:id="@+id/item_noUsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:text="@string/_40_min"
+        android:layout_marginTop="5dp"
+        android:text="Capacidad:"
         android:textAppearance="@style/greeting_text"
         android:textColor="@color/black_design"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_name"
-        app:layout_constraintEnd_toEndOf="@+id/item_image"
-        app:layout_constraintTop_toTopOf="@+id/item_name" />
+        app:layout_constraintStart_toStartOf="@+id/item_name"
+        app:layout_constraintTop_toBottomOf="@+id/item_name" />
+
+    <TextView
+        android:id="@+id/item_direccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Jr Larco 333"
+        app:layout_constraintStart_toStartOf="@+id/item_noUsed"
+        app:layout_constraintTop_toBottomOf="@+id/item_noUsed" />
+
+    <TextView
+        android:id="@+id/item_capacidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:fontFamily="@font/proximanovabold"
+        android:text="40"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/item_noUsed"
+        app:layout_constraintStart_toEndOf="@+id/item_noUsed"
+        app:layout_constraintTop_toTopOf="@+id/item_noUsed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
