--- a/app/src/main/res/menu/menu_inicio_sesion.xml
+++ b/app/src/main/res/menu/menu_inicio_sesion.xml
@@ -6,8 +6,11 @@
         android:id="@+id/nav_perfil"
         android:title="@string/perfil" />
     <item
-        android:id="@+id/nav_promociones"
-        android:title="@string/promociones" />
+        android:id="@+id/nav_nosotros"
+        android:title="@string/nosotros" />
+    <item
+        android:id="@+id/nav_recomendaciones"
+        android:title="@string/recomendaciones" />
     <item
         android:id="@+id/nav_locales"
         android:title="@string/locales" />
