--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,10 @@
     <style name="black_button_design">
         <item name="android:backgroundTint">@color/black_design</item>
     </style>
+
+    <style name="nombresNosotros">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:fontFamily">@font/proximanovabold</item>
+        <item name="android:textColor">@color/black_design</item>
+    </style>
 </resources>
