--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,11 +84,11 @@
         android:id="@+id/btnDrink"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:background="@drawable/chicken"
+        android:background="@drawable/drink"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/drink"
         android:scaleType="centerInside"
-        android:src="@drawable/chicken"
+        android:src="@drawable/drink"
         app:layout_constraintBottom_toBottomOf="@+id/btnChicken"
         app:layout_constraintEnd_toStartOf="@+id/btnPizza"
         app:layout_constraintHorizontal_bias="0.5"
