--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
 
     android:clickable="true"
+
+
     android:focusableInTouchMode="true"
-
-
     tools:context=".ProfileActivity">
 
     <EditText
@@ -78,14 +78,15 @@
 
     <ImageView
         android:id="@+id/item_image_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="40dp"
+        android:background="@drawable/mujer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/mujer" />
 
     <Button
         android:id="@+id/btnSave"
