--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -27,9 +27,8 @@
         android:text="@string/confirm_order"
         android:textAlignment="textStart"
         app:cornerRadius="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/cart_recycler"
+        app:layout_constraintStart_toStartOf="@+id/cart_recycler"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <Button
@@ -137,11 +136,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_recycler"
-        android:layout_width="371dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tituloCart">
