--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -19,7 +19,7 @@
 
     <Button
         android:id="@+id/btnConfirmOrder"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginTop="44dp"
         android:backgroundTint="@color/red_design"
@@ -27,8 +27,8 @@
         android:text="@string/confirm_order"
         android:textAlignment="textStart"
         app:cornerRadius="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/cart_recycler"
-        app:layout_constraintStart_toStartOf="@+id/cart_recycler"
+        app:layout_constraintEnd_toEndOf="@+id/textView46"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <Button
