--- a/app/src/main/res/layout/food_row_item.xml
+++ b/app/src/main/res/layout/food_row_item.xml
@@ -54,12 +54,13 @@
         android:id="@+id/item_cart"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:background="@drawable/ic_cart"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@+id/item_price"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/item_description"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toEndOf="@+id/ratingBar"
         app:layout_constraintTop_toTopOf="@+id/item_name" />
 
     <RatingBar
