--- a/app/src/main/res/layout/store_full_row_item.xml
+++ b/app/src/main/res/layout/store_full_row_item.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Capacidad:"
+        android:text="@string/capacidad"
         android:textAppearance="@style/greeting_text"
         android:textColor="@color/black_design"
         android:textSize="14sp"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Jr Larco 333"
+        android:text="@string/jr_larco_333"
         app:layout_constraintStart_toStartOf="@+id/item_noUsed"
         app:layout_constraintTop_toBottomOf="@+id/item_noUsed" />
 
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/proximanovabold"
-        android:text="40"
+        android:text="@string/_40"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/item_noUsed"
         app:layout_constraintStart_toEndOf="@+id/item_noUsed"
